<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity"
    android:background="@color/background"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="52dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="52dp">



        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/divider1"
            app:layout_constraintStart_toEndOf="@+id/buttonSaveAndBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:text="@string/your_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:text="@string/your_surname"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:text="@string/about_you"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <EditText
            android:id="@+id/editTextYourName"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="8dp"
            android:autofillHints="@string/name"
            android:background="#84A9C8"
            android:ems="5"
            android:hint="@string/name"
            android:inputType="text|textCapWords"
            android:maxLength="15"
            android:padding="6dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editTextYourSurname"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="8dp"
            android:autofillHints="@string/name"
            android:background="#84A9C8"
            android:ems="5"
            android:hint="@string/surname"
            android:inputType="text|textCapWords"
            android:maxLength="15"
            android:padding="6dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <EditText
            android:id="@+id/editTextYourAge"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="8dp"
            android:autofillHints="age"
            android:background="#84A9C8"
            android:ems="10"
            android:inputType="number"
            android:maxLength="2"
            android:padding="6dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editTextYourInfo"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:autofillHints="info about yourself"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/text_about_yourself"
            android:inputType="textMultiLine"
            android:maxLength="250"
            android:padding="6dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSaveAndBack" />

        <View
            android:id="@+id/divider2"
            android:layout_width="395dp"
            android:layout_height="0.5dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextYourName" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextYourAge" />

        <View
            android:id="@+id/divider4"
            android:layout_width="395dp"
            android:layout_height="0.5dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextYourSurname" />

        <ImageView
            android:id="@+id/buttonSaveAndBack"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:background="@drawable/arrow_circle_left_icon_175479"
            android:backgroundTint="#10649D"
            android:contentDescription="@string/back_to_userinfo"
            android:padding="6dp"
            android:textColorLink="#84A9C8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewSetChanges"
            android:layout_width="38dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_manage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>